hphp/test/zend/bad/Zend/tests/bug54585.php
<?php
function testing($source) {
                unset($source[$cos]);
}
testing($_GET);
echo "ok\n";
?>